{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 525,
  "lineage": "b49888a9-00ba-2c56-3377-1768c28c2a2f",
  "resources": [
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:039725305879:internet-gateway/igw-06f37cda18c036c30",
            "id": "igw-06f37cda18c036c30",
            "owner_id": "039725305879",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-09ecc89cb4799bb4b"
          },
          "dependencies": [
            "module.application.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:039725305879:route-table/rtb-06321bd28f75d3408",
            "id": "rtb-06321bd28f75d3408",
            "owner_id": "039725305879",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ecc89cb4799bb4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:039725305879:route-table/rtb-0c6a5f2e781e2685a",
            "id": "rtb-0c6a5f2e781e2685a",
            "owner_id": "039725305879",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06f37cda18c036c30",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-public-route-table"
            },
            "tags_all": {
              "Name": "my-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ecc89cb4799bb4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application.aws_internet_gateway.gw",
            "module.application.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed45e46cd4c8cf9d",
            "route_table_id": "rtb-06321bd28f75d3408",
            "subnet_id": "subnet-02f27d754fe5c8dc2"
          },
          "dependencies": [
            "module.application.aws_route_table.private",
            "module.application.aws_subnet.private",
            "module.application.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0169663e3e1927c1b",
            "route_table_id": "rtb-0c6a5f2e781e2685a",
            "subnet_id": "subnet-0563917254a07536f"
          },
          "dependencies": [
            "module.application.aws_internet_gateway.gw",
            "module.application.aws_route_table.public",
            "module.application.aws_subnet.public",
            "module.application.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:039725305879:security-group/sg-0759210d7e5703248",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0759210d7e5703248",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "039725305879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ecc89cb4799bb4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:039725305879:subnet/subnet-02f27d754fe5c8dc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f27d754fe5c8dc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039725305879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-09ecc89cb4799bb4b"
          },
          "dependencies": [
            "module.application.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:039725305879:subnet/subnet-0563917254a07536f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0563917254a07536f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039725305879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-09ecc89cb4799bb4b"
          },
          "dependencies": [
            "module.application.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:039725305879:vpc/vpc-09ecc89cb4799bb4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ac07b239e305f5e4",
            "default_route_table_id": "rtb-00ea44a0c34f66a16",
            "default_security_group_id": "sg-03cc7b058c49b0fee",
            "dhcp_options_id": "dopt-056a5a4431e51c90d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09ecc89cb4799bb4b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ea44a0c34f66a16",
            "owner_id": "039725305879",
            "tags": {
              "Name": "food-app-vpc"
            },
            "tags_all": {
              "Name": "food-app-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "api_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:039725305879:vpc-endpoint/vpce-0e5e798bfd0a0f71f",
            "dns_entry": [
              {
                "dns_name": "vpce-0e5e798bfd0a0f71f-z062ejwn.execute-api.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0e5e798bfd0a0f71f-z062ejwn-ap-northeast-1a.execute-api.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e5e798bfd0a0f71f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0e04dc319f57b0e68"
            ],
            "owner_id": "039725305879",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0759210d7e5703248"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.execute-api",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.49",
                "subnet_id": "subnet-02f27d754fe5c8dc2"
              }
            ],
            "subnet_ids": [
              "subnet-02f27d754fe5c8dc2"
            ],
            "tags": {
              "Name": "api-gateway-endpoint"
            },
            "tags_all": {
              "Name": "api-gateway-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09ecc89cb4799bb4b"
          },
          "dependencies": [
            "module.application.aws_security_group.allow_http",
            "module.application.aws_subnet.private",
            "module.application.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:039725305879:vpc-endpoint/vpce-0f34a4238da83492b",
            "dns_entry": [
              {
                "dns_name": "vpce-0f34a4238da83492b-ycqvr6zk.monitoring.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0f34a4238da83492b-ycqvr6zk-ap-northeast-1a.monitoring.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f34a4238da83492b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0e654018ccf3ad3d4"
            ],
            "owner_id": "039725305879",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0759210d7e5703248"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.monitoring",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.216",
                "subnet_id": "subnet-02f27d754fe5c8dc2"
              }
            ],
            "subnet_ids": [
              "subnet-02f27d754fe5c8dc2"
            ],
            "tags": {
              "Name": "cloudwatch-endpoint"
            },
            "tags_all": {
              "Name": "cloudwatch-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09ecc89cb4799bb4b"
          },
          "dependencies": [
            "module.application.aws_security_group.allow_http",
            "module.application.aws_subnet.private",
            "module.application.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:039725305879:vpc-endpoint/vpce-08f5c007f680cb0b4",
            "dns_entry": [
              {
                "dns_name": "vpce-08f5c007f680cb0b4-te6lpswk.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-08f5c007f680cb0b4-te6lpswk-ap-northeast-1a.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08f5c007f680cb0b4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06e74c3acaf56a4b9"
            ],
            "owner_id": "039725305879",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0759210d7e5703248"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.api",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.143",
                "subnet_id": "subnet-02f27d754fe5c8dc2"
              }
            ],
            "subnet_ids": [
              "subnet-02f27d754fe5c8dc2"
            ],
            "tags": {
              "Name": "ecr-endpoint"
            },
            "tags_all": {
              "Name": "ecr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09ecc89cb4799bb4b"
          },
          "dependencies": [
            "module.application.aws_security_group.allow_http",
            "module.application.aws_subnet.private",
            "module.application.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:039725305879:vpc-endpoint/vpce-07411cc3446a579fc",
            "dns_entry": [
              {
                "dns_name": "vpce-07411cc3446a579fc-zcp4e6df.lambda.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-07411cc3446a579fc-zcp4e6df-ap-northeast-1a.lambda.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07411cc3446a579fc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0b494491a2c01c81f"
            ],
            "owner_id": "039725305879",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0759210d7e5703248"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.lambda",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.137",
                "subnet_id": "subnet-02f27d754fe5c8dc2"
              }
            ],
            "subnet_ids": [
              "subnet-02f27d754fe5c8dc2"
            ],
            "tags": {
              "Name": "lambda-endpoint"
            },
            "tags_all": {
              "Name": "lambda-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09ecc89cb4799bb4b"
          },
          "dependencies": [
            "module.application.aws_security_group.allow_http",
            "module.application.aws_subnet.private",
            "module.application.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:039725305879:vpc-endpoint/vpce-00bb046a933dacd5a",
            "dns_entry": [
              {
                "dns_name": "vpce-00bb046a933dacd5a-dls4iwxn.rds.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-00bb046a933dacd5a-dls4iwxn-ap-northeast-1a.rds.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00bb046a933dacd5a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0ca81152166207b95"
            ],
            "owner_id": "039725305879",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0759210d7e5703248"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.rds",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.23",
                "subnet_id": "subnet-02f27d754fe5c8dc2"
              }
            ],
            "subnet_ids": [
              "subnet-02f27d754fe5c8dc2"
            ],
            "tags": {
              "Name": "rds-endpoint"
            },
            "tags_all": {
              "Name": "rds-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09ecc89cb4799bb4b"
          },
          "dependencies": [
            "module.application.aws_security_group.allow_http",
            "module.application.aws_subnet.private",
            "module.application.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:039725305879:vpc-endpoint/vpce-055285f7445eb5494",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.20.0/24",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "id": "vpce-055285f7445eb5494",
            "owner_id": "039725305879",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06321bd28f75d3408"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "s3-endpoint"
            },
            "tags_all": {
              "Name": "s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-09ecc89cb4799bb4b"
          },
          "dependencies": [
            "module.application.aws_route_table.private",
            "module.application.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}